# zamapay

./: .env.example  .gitignore  .mise.toml  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Justfile  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml
.codex/: config.toml  hooks.json
.codex/agents/: build-fixer.toml  debugger.toml  dependency-expert.toml  designer.toml  executor.toml  git-master.toml  researcher.toml  verifier.toml  writer.toml
.codex/skills/ai-slop-cleaner/: SKILL.md
.codex/skills/code-review/: SKILL.md
.codex/skills/ralplan/: SKILL.md
.codex/skills/security-review/: SKILL.md
.codex/skills/team/: SKILL.md
.codex/skills/ultraqa/: SKILL.md
.omx/context/: merchant-payment-project-loop-20260507T035033Z.md  mermer-pay-zama-platform-20260506T074640Z.md
.omx/plans/: merchant-payment-project-loop-consensus-plan.md  mermer-pay-initial-consensus-plan.md  prd-merchant-payment-project-loop.md  prd-mermer-pay.md  test-spec-merchant-payment-project-loop.md  test-spec-mermer-pay.md
apps/: ARCHITECTURE.md
apps/web/: ARCHITECTURE.md  next.config.ts  package.json  tsconfig.json
apps/web/app/: ARCHITECTURE.md  globals.css  install-scripts.ts  layout.tsx  page.tsx
apps/web/components/: ARCHITECTURE.md
apps/web/e2e/: ARCHITECTURE.md  auth-login.spec.ts  checkout-flow.spec.ts  operator-failure-drills.spec.ts
apps/web/hooks/: ARCHITECTURE.md
apps/web/lib/: ARCHITECTURE.md  amount-format.ts  api.ts  contract-environment.ts  contracts.ts  demo-dashboard.ts  dev-signer-gate.ts  fhevm.ts  local-fhevm-browser.ts  local-fhevm-dev.ts  merchant-portal.ts  operator.ts  payment-rails.ts  project-amounts.ts  runtime-profile.ts  rust-api-transport.ts  sepolia-fhevm-server.ts  settlement-bucket.ts  time-format.ts  wallet.ts  zama-relayer-browser.ts
apps/web/public/: ARCHITECTURE.md
apps/web/scripts/: ARCHITECTURE.md  create-sepolia-chain-invoice.mjs  run-e2e.mjs
apps/web/tests/: amount-format.test.ts  checkout-evm-funding.test.ts  contract-environment.test.ts  dev-signer-gate.test.ts  docs-content.test.ts  (+8 more)
contracts/: ARCHITECTURE.md  hardhat.config.js  package.json
contracts/contracts/: ConfidentialInvoiceSettlement.sol  ConfidentialUSDMock.sol  EvmCheckoutSettlement.sol  EvmFundingTestMocks.sol  MerchantRegistry.sol  MockConfidentialPaymentRail.sol  PrivateCheckoutSettlement.sol  PrivateSubscriptionRegistry.sol  StandardERC20Mock.sol  SubscriptionPass.sol
contracts/scripts/: ARCHITECTURE.md  deploy-contracts.js  deploy-local.js  mint-test-usd.js  project-finalized-payment.js  public-hardhat-keys.js  smoke-local-invoice.js  sync-generated.js  verify-sepolia-readiness.js
contracts/test/: confidential-invoice-settlement.js  evm-checkout-settlement.js  merchant-registry.js  private-checkout-settlement.js  private-subscription-registry.js  standard-erc20-mock.js
crates/: ARCHITECTURE.md
crates/api/: ARCHITECTURE.md  Cargo.toml
crates/api/src/: billing.rs  http_policy.rs  lib.rs  main.rs  projects.rs  runtime_profile.rs
crates/api/tests/: auth_nonce_session.rs  billing_routes.rs  merchant_portal_routes.rs  operator_reliability_routes.rs
crates/cli/: ARCHITECTURE.md  Cargo.toml
crates/cli/src/: auth.rs  client.rs  common.rs  config.rs  control_ops.rs  lib.rs  main.rs  merchant_ops.rs  setup_ops.rs
crates/domain/: ARCHITECTURE.md  Cargo.toml
crates/fulfillment/: ARCHITECTURE.md  Cargo.toml
crates/indexer/: ARCHITECTURE.md  Cargo.toml
crates/shared/: ARCHITECTURE.md  Cargo.toml
crates/storage/: ARCHITECTURE.md  Cargo.toml
crates/storage/src/: billing.rs  evm_rail.rs  invoice_seed.rs  lib.rs  persistence.rs  project_support.rs  projections.rs  projects.rs
crates/storage/src/evm_rail/: catalog.rs  support.rs
crates/storage/src/pg_store/: ARCHITECTURE.md  dto.rs  mod.rs  repository.rs  schema.rs
crates/storage/tests/: portal_store.rs
crates/webhook-verifier/: ARCHITECTURE.md  Cargo.toml
demo/: ARCHITECTURE.md
demo/cardforge/: ARCHITECTURE.md  README.md
demo/cardforge/backend/: .env.example  ARCHITECTURE.md  Cargo.toml  railway.toml  rust-toolchain.toml
demo/cardforge/backend/src/: catalog.rs  config.rs  error.rs  main.rs  process.rs  store.rs  tests.rs  types.rs
docs/content/: ARCHITECTURE.md
docs/runbooks/: ARCHITECTURE.md  development-deployment-workflow.md  implementation-status.md  local-hardhat-rail.md  private-checkout-v1.md  sepolia-demo.md  testnet-config.md
env/: .gitignore  ARCHITECTURE.md  README.md  local-dev.cardforge-backend.env.example  local-dev.cardforge-frontend.env.example  local-dev.zamapay-api.env.example  local-dev.zamapay-web.env.example  sepolia.cardforge-backend.env.example  sepolia.cardforge-frontend.env.example  sepolia.contracts.env.example  sepolia.zamapay-api.env.example  sepolia.zamapay-web.env.example  supabase.cardforge-backend.env.example  supabase.zamapay-api.env.example
fixtures/: ARCHITECTURE.md
fixtures/merchant-api/: ARCHITECTURE.md  contract-v1.json
research/: pricing.md  sub.md
scripts/: ARCHITECTURE.md  check-public-docs.mjs  evm-erc20-indexer.mjs  local-evm-erc20-verify.mjs  local-full-verify.js  local-readiness.js  merchant-project-loop.js  reset-local-dev.js  run-rust-tests.sh  run-with-env.sh  runtime-profile.js  sdk-local-smoke.mjs  seed-cardforge-local-project.js  sepolia-handoff.js  sync-cardforge-frontend-generated.js  verify-runtime-profile.js
scripts/postgres-init/: 01-cardforge.sql
skills/: ARCHITECTURE.md
skills/zamapay/: ARCHITECTURE.md  SKILL.md
(+150 files in other folders)
