[package]
name = "zamapay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zamapay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ethers-signers = { version = "2", default-features = false }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
webhook-verifier = { path = "../webhook-verifier" }

[dev-dependencies]
base64.workspace = true
