[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
domain = { path = "../domain" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shared = { path = "../shared" }
uuid.workspace = true
