[package]
name = "cardforge-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["json"] }
ethers-core = { version = "2", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
